# Continuous-Integration

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_project.sh
.github/workflows/: python-tests.yml
scripts/: run_tests.py
src/: __init__.py  text_utils.py
tests/: __init__.py  test_text_utils.py
